# turnip-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  premake5.lua  turnip-engine.sln  vcpkg.json
turnip-engine/: CMakeLists.txt  build.lua  engine.lua  turnip-engine.cpp  turnip-engine.vcxproj  turnip-engine.vcxproj.filters  vcpkg.json
turnip-engine/src/: Common.h  Common.hpp  Entry.h  Entry.hpp  TurnipEngine.h  TurnipEngine.hpp  common.hpp  pch.h  pch.hpp  test.cpp  turnip_engine.hpp
turnip-engine/src/Core/: Defines.h  Defines.hpp  NonCopyable.h  NonCopyable.hpp
turnip-engine/src/Graphics/: BackendType.h  BackendVersion.h  Buffer.hpp  Color.cpp  Color.h  CommandBuffer.h  CommandBuffer.hpp  CommonGraphics.hpp  Framebuffer.hpp  Graphics.h  GraphicsAPI.h  GraphicsAPI.hpp  GraphicsBackend.cpp  GraphicsBackend.h  GraphicsCommon.h  GraphicsDevice.h  GraphicsLayer.hpp  GraphicsSpecification.hpp  GraphicsSystem.cpp  GraphicsSystem.h  GraphicsSystem.hpp  IGraphicsBackend.h  Mesh.cpp  Mesh.h  Pipeline.h  Pipeline.hpp  RenderingBackend.hpp  Renderpass.h  Renderpass.hpp  Shader.cpp  Shader.h  Shader.hpp  Swapchain.hpp  Texture.hpp  Vertex.h  VertexFormat.hpp  VertexLayout.hpp
turnip-engine/src/Platform/: Platform.h  Platform.hpp
turnip-engine/src/Rendering/: Context.h  GraphicsAPI.h  GraphicsCommands.h  RenderCommands.h  RenderContext.h  RenderDevice.cpp  RenderDevice.h  RenderInitializer.h  RenderingSystem.cpp  RenderingSystem.h  UploadCommands.h
turnip-engine/src/Turnip/: Common.h
turnip-testbed/: CMakeLists.txt  main.cpp
(+724 files in other folders)
